--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -207,7 +207,7 @@
             </button>
     
             <a class="navbar-brand ms-2" href="/">
-                <img src="{% static 'ReeDuVie.jpg' %}" alt="Logo" style="max-height: 60px; transform: scale(1.5);">
+                <img src="{% static 'MedicalSiteLogo.svg' %}" alt="Logo" style="max-height: 60px; transform: scale(1.5);">
             </a>
     
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -319,7 +319,7 @@
             <div class="row">
                 <!-- Logo Section -->
                 <div class="col-lg-3 col-md-6 mb-4">
-                    <img src="{% static 'ReeDuVie.png' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
+                    <img src="{% static 'MedicalSiteLogo.svg' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook me-3"></i></a>
                         <a href="#"><i class="fab fa-twitter me-3"></i></a>
