--- a/frontend/templates/temp.html
+++ b/frontend/templates/temp.html
@@ -387,11 +387,12 @@
             </video>
         </div>
 
+
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="{% static 'ReeDuVie.jpg' %}" alt="Clinika">
+                    <img src="{% static 'MedicalSiteLogo.svg' %}" alt="Clinika">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
@@ -484,7 +485,7 @@
                 <!-- Logo Section -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <a href="/">
-                    <img src="{% static 'ReeDuVie.png' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
+                    <img src="{% static 'MedicalSiteLogo.svg' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
 
 
                     </a>
