--- a/patientdashboard/templates/patientdashboard/patient_base.html
+++ b/patientdashboard/templates/patientdashboard/patient_base.html
@@ -1,5 +1,5 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -635,9 +635,9 @@
         <!-- Logo -->
         <div class="header-left">
             <a href="/" class="logo">
-                <img src="{% static 'ReeDuVie.png' %}" width="35" height="35" alt="Preclinic">
-
+                <img src="{% static 'MedicalSiteLogo.svg' %}" width="35" height="35" alt="Preclinic">
             </a>
+
         </div>
         <a id="toggle_btn" class="d-none d-lg-block" href="javascript:void(0);">
             <i class="fa fa-bars"style="color: white;"></i>
@@ -704,23 +704,30 @@
 
 
 
+
+
             <!-- Profile -->
-            <li class="nav-item dropdown has-arrow">
-                <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown">
-                    <span class="user-img">
-                        {% if patient and patient.profile_photo %}
-                            <img class="rounded-circle" src="{{ patient.profile_photo.url }}" width="30" alt="Profile">
-                        {% else %}
-                            <!-- Use a FontAwesome icon if no profile photo -->
-                            <i class="fas fa-user-circle" style="font-size: 30px;"></i>
-                        {% endif %}
-                    </span>
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{% url 'patientdashboard:profile' %}">My Profile</a>
-                    <a class="dropdown-item" href="{% url 'frontend:logout' %}">Logout</a>
-                </div>
-            </li>
+           <li class="nav-item dropdown has-arrow">
+    <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown" aria-expanded="false" style="display: flex; align-items: center;">
+        <span class="user-img" style="display: inline-flex; align-items: center; justify-content: center; width: 32px; height: 32px;">
+            {% if patient and patient.profile_photo %}
+                <img src="{{ patient.profile_photo.url }}" alt="Profile" style="width: 30px; height: 30px; border-radius: 50%;">
+            {% else %}
+                <i class="fas fa-user-circle" style="font-size: 30px; color: #6c757d;"></i>
+            {% endif %}
+        </span>
+    </a>
+    <div class="dropdown-menu dropdown-menu-right">
+        <a class="dropdown-item" href="{% url 'patientdashboard:profile' %}">My Profile</a>
+        <a class="dropdown-item" href="{% url 'frontend:logout' %}">Logout</a>
+    </div>
+</li>
+
+
+
+
+
+
 
         </ul>
     </div>
@@ -749,29 +756,33 @@
                     <i class="fa fa-times"></i>
                 </button>
                 <div class="sidebar-inner">
-                    
+
                     <div id="sidebar-menu" class="sidebar-menu">
                         <ul>
                             <li class="{% if request.path == '/patient-dashboard/appointments_patients/' %}active{% endif %}">
                                 <a href="{% url 'patientdashboard:appointments_patients' %}">
-                                    <i class="fa fa-dashboard" style="color: white;"></i><span style="color: white;">Dashboard</span>
+                                    <i class="fa fa-dashboard" style="color: white;"></i><span style="color: rgb(255, 255, 255);">Dashboard</span>
                                 </a>
                             </li>
-                            <li class="{% if request.path == '/patient-dashboard/medical_records/' %}active{% endif %}">
+                            <!-- <li class="{% if request.path == '/patient-dashboard/medical_records/' %}active{% endif %}">
                                 <a href="">
                                     <i class="fa fa-wheelchair" style="color: white;"></i> <span style="color: white;">Medical Records</span>
                                 </a>
-                            </li>
+                            </li> -->
+
                             <li class="{% if request.path == '/patient-dashboard/booking/' %}active{% endif %}">
                                 <a href="{% url 'patient_dashboard:specialty_selection' %}">
                                     <i class="fa fa-calendar" style="color: white;"></i> <span style="color: white;">Book Appointments</span>
                                 </a>
                             </li>
+
+
                             <li class="{% if request.path == '/patient-dashboard/billing/' %}active{% endif %}">
                                 <a href="{% url 'patient_dashboard:all_bills' %}">
                                     <i class="fa fa-calendar-check-o" style="color: white;"></i> <span style="color: white;">Billing and Payments</span>
                                 </a>
                             </li>
+
 
                             <li class="{% if request.path == '/patient-dashboard/exercises/' %}active{% endif %}">
                                 <a href="{% url 'patientdashboard:exercises' %}">
@@ -780,11 +791,14 @@
                             </li>
                             
                         </ul>
+
                     </div>
                 </div>
+
             </div>
-    
-    
+
+
+
 
         <!-- Page wrapper -->
 
@@ -838,8 +852,10 @@
             <div class="row">
                 <!-- Logo Section -->
                 <div class="col-lg-3 col-md-6 mb-4">
+
                     <a href="/">
-                    <img src="{% static 'ReeDuVie.png' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
+
+                    <img src="{% static 'MedicalSiteLogo.svg' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
 
 
                     </a>
@@ -1078,6 +1094,7 @@ connectWebSocket();
                 $(".sidebar").css("height", `${windowHeight}px`);
             }
 
+
             // Toggle sidebar function
             function toggleSidebar() {
                 if (isMobile()) {
@@ -1185,11 +1202,11 @@ connectWebSocket();
 <!-- Bootstrap JS -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-     <script src="{% static 'assets3/js/jquery.min.js' %}"></script>
-     <script src="{% static 'assets3/js/popper.js' %}"></script>
-     <script src="{% static 'assets3/js/bootstrap.min.js' %}"></script>
-     <script src="{% static 'assets3/js/main.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{% static 'assets3/js/jquery.min.js' %}"></script>
+<script src="{% static 'assets3/js/popper.js' %}"></script>
+<script src="{% static 'assets3/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'assets3/js/main.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
