--- a/practitionerdashboard/templates/practitionerdashboard/base.html
+++ b/practitionerdashboard/templates/practitionerdashboard/base.html
@@ -521,33 +521,26 @@
 
 
         <!-- Profile Picture -->
-        <li class="nav-item dropdown has-arrow">
-          <a href="#" class="dropdown-toggle nav-link user-link d-flex align-items-center" data-toggle="dropdown">
-                <span class="user-img d-inline-block position-relative">
-                    <img src="{% get_practitioner_image request %}" 
-                        alt="Profile Picture" 
-                        class="rounded-circle border border-light shadow-sm" 
-                        width="36" height="36" 
-                        style="object-fit: cover;">
-                </span>
-                <span class="ml-2 font-weight-medium text-dark">Profile</span>
-            </a>
+     <li class="nav-item dropdown has-arrow">
+    <a href="#" class="dropdown-toggle nav-link user-link d-flex align-items-center" data-toggle="dropdown">
+        <span class="user-img d-inline-block position-relative">
+            <img src="{% get_practitioner_image request %}" 
+                 alt="Profile Picture" 
+                 class="img-fluid rounded-circle border border-light shadow-sm" 
+                 style="width: 36px; height: 36px; object-fit: cover;">
+        </span>
+        <span class="ml-2 font-weight-medium text-dark d-none d-md-inline">Profile</span>
+    </a>
 
-
-
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="{% url 'practitioner_dashboard:practitioner_profile' %}">My Profile</a>
-                <a class="dropdown-item" href="{% url 'frontend:logout' %}">Logout</a>
-            </div>
-
-
-
-        </li>
-
+    <div class="dropdown-menu">
+        <a class="dropdown-item" href="{% url 'practitioner_dashboard:practitioner_profile' %}">My Profile</a>
+        <a class="dropdown-item" href="{% url 'frontend:logout' %}">Logout</a>
+    </div>
+</li>
     </ul>
 
-
 </div>
+
 
 
 
