--- a/frontend/templates/PatientLogin.html
+++ b/frontend/templates/PatientLogin.html
@@ -286,7 +286,7 @@
                             <i class="fas fa-sign-in-alt me-2"></i>Sign In
                         </button>
 
-                        <div class="social-login">
+                        <!-- <div class="social-login">
                             <p class="text-center text-muted mb-3">Or continue with</p>
                             <div class="d-flex justify-content-center">
                                <a href="/auth/login/google-oauth2/" class="social-btn btn btn-outline-danger me-2">
@@ -300,7 +300,7 @@
 
 
                         </div>
-                        </div>
+                        </div> -->
 
                     </form>
 
@@ -308,6 +308,8 @@
                         New to our platform? <a href="{% url 'frontend:patient_signup' %}">Create an account</a>
                     </p>
                 </div>
+
+                
             </div>
         </div>
     </div>
