--- a/patientdashboard/templates/patientdashboard/specialty_selection.html
+++ b/patientdashboard/templates/patientdashboard/specialty_selection.html
@@ -3,6 +3,9 @@
 
 {% block title %}Select Specialty{% endblock %}
 {% block extra_css %}
+
+
+
 <style>
     .card {
         transition: transform 0.3s;
@@ -77,4 +80,6 @@
         {% endfor %}
     </div>
 </div>
-{% endblock %}
+{% endblock content %}
+
+
