--- a/patientdashboard/templates/patientdashboard/patient_base.html
+++ b/patientdashboard/templates/patientdashboard/patient_base.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="en">
 
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
@@ -632,6 +633,7 @@
             <i class="fa fa-bars"style="color: white;"></i>
         </a>
        
+
         <!-- Logo -->
         <div class="header-left">
             <a href="/" class="logo">
@@ -657,8 +659,6 @@
         
         
         
-
-
 
     
         <!-- User Menu -->
@@ -708,23 +708,22 @@
 
             <!-- Profile -->
            <li class="nav-item dropdown has-arrow">
-    <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown" aria-expanded="false" style="display: flex; align-items: center;">
-        <span class="user-img" style="display: inline-flex; align-items: center; justify-content: center; width: 32px; height: 32px;">
-            {% if patient and patient.profile_photo %}
-                <img src="{{ patient.profile_photo.url }}" alt="Profile" style="width: 30px; height: 30px; border-radius: 50%;">
-            {% else %}
-                <i class="fas fa-user-circle" style="font-size: 30px; color: #6c757d;"></i>
-            {% endif %}
-        </span>
-    </a>
-    <div class="dropdown-menu dropdown-menu-right">
-        <a class="dropdown-item" href="{% url 'patientdashboard:profile' %}">My Profile</a>
-        <a class="dropdown-item" href="{% url 'frontend:logout' %}">Logout</a>
-    </div>
-</li>
+                <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown" aria-expanded="false" style="display: flex; align-items: center;">
+                    <span class="user-img" style="display: inline-flex; align-items: center; justify-content: center; width: 32px; height: 32px;">
+                        {% if patient and patient.profile_photo %}
+                            <img src="{{ patient.profile_photo.url }}" alt="Profile" style="width: 30px; height: 30px; border-radius: 50%;">
+                        {% else %}
+                            <i class="fas fa-user-circle" style="font-size: 30px; color: #6c757d;"></i>
+                        {% endif %}
+                    </span>
 
+                </a>
 
-
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="{% url 'patientdashboard:profile' %}">Patient Profile</a>
+                    <a class="dropdown-item" href="{% url 'frontend:logout' %}">Logout</a>
+                </div>
+            </li>
 
 
 
@@ -791,7 +790,24 @@
                                     <i class="fa fa-heartbeat" style="color: white;"></i> <span style="color: white;">Exercises</span>
                                 </a>
                             </li>
+
+                            <li class="{% if request.path == '/patient-dashboard/symptoms/' %}active{% endif %}">
+                                <a href="{% url 'patientdashboard:symptoms_list' %}">
+                                    <i class="fa fa-stethoscope" style="color: white;"></i>
+                                    <span style="color: white;">Symptoms Details</span>
+                                </a>
+                            </li>
+
+                            <li class="">
+                                <a href="{% url 'patient_dashboard:eligible_practitioners_for_review' %}">
+                                    <i class="fa fa-stethoscope" style="color: white;"></i>
+                                    <span style="color: white;">Review</span>
+                                </a>
+                            </li>
+
                             
+
+
                         </ul>
 
                     </div>
@@ -800,9 +816,6 @@
             </div>
 
 
-
-
-        <!-- Page wrapper -->
 
         <!-- Page wrapper -->
         <div class="page-wrapper">
@@ -909,18 +922,18 @@
             </div>
 
             <!-- Bottom Footer -->
-<!-- Bottom Footer continued -->
-<div class="row mt-4 pt-3 border-top">
-    <div class="col-md-6 text-center text-md-start">
-        <p class="mb-0">&copy; 2025 Reeducaive. All Rights Reserved.</p>
-    </div>
-    <div class="col-md-6 text-center text-md-end">
-        <a href="#">Terms and Conditions</a>
-        <span class="mx-2">|</span>
-        <a href="#">Policy</a>
-    </div>
-</div>
-</div>
+            <!-- Bottom Footer continued -->
+            <div class="row mt-4 pt-3 border-top">
+                <div class="col-md-6 text-center text-md-start">
+                    <p class="mb-0">&copy; 2025 Reeducaive. All Rights Reserved.</p>
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <a href="#">Terms and Conditions</a>
+                    <span class="mx-2">|</span>
+                    <a href="#">Policy</a>
+                </div>
+            </div>
+            </div>
 </footer>
 <script>
     let chatSocket;
@@ -1081,11 +1094,13 @@ document.addEventListener("DOMContentLoaded", function() {
 connectWebSocket();
 
 </script>
+
+
     <!-- Scripts -->
-    <script src="{% static 'assets/js/jquery-3.2.1.min.js' %}"></script>
-    <script src="{% static 'assets/js/popper.min.js' %}"></script>
-    <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.0/mdb.min.js"></script>
+<script src="{% static 'assets/js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'assets/js/popper.min.js' %}"></script>
+<script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.0/mdb.min.js"></script>
     <script>
         $(document).ready(function() {
             const isMobile = () => window.innerWidth <= 991.98;
